--- a/app/views/AddSectionsView.scala.html
+++ b/app/views/AddSectionsView.scala.html
@@ -38,9 +38,9 @@
 
         @heading(messages("addSections.heading"))
 
-        @heading2(messages("vm.statusText"))
+        @heading2(messages(vm.statusText))
 
-        @p(messages("addSections.completedSections", completedSections), extraClasses = Seq("govuk-!-margin-bottom-7"))
+        @p(messages("addSections.completedSections", vm.completedCount), extraClasses = Seq("govuk-!-margin-bottom-7"))
 
         @taskList(List(("", vm.sections)))
 
