--- a/app/views/AddSectionsAgentView.scala.html
+++ b/app/views/AddSectionsAgentView.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @import models.Mode
-@import viewmodels.Task
+@import viewmodels.{Task, AddSectionsViewModel}
 @import views.html.components._
 
 @this(
@@ -29,7 +29,7 @@
         p: ParagraphBody
 )
 
-@(taxYear: Int, sections: List[Task], completedSections: Int)(implicit request: Request[_], messages: Messages)
+@(taxYear: Int, vm: AddSectionsViewModel)(implicit request: Request[_], messages: Messages)
 
     @layout(pageTitle = titleNoForm(messages("addSections.agent.title")), taxYear = taxYear) {
 
@@ -37,15 +37,15 @@
 
         @heading(messages("addSections.agent.heading"))
 
-        @heading2(messages("addSections.incomplete"))
+        @heading2(messages(vm.statusText))
 
-        @p(messages("addSections.completedSections", completedSections), extraClasses = Seq("govuk-!-margin-bottom-7"))
+        @p(messages("addSections.completedSections", vm.completedCount), extraClasses = Seq("govuk-!-margin-bottom-7"))
 
-        @taskList(sections)
+        @taskList(List(("", vm.sections)))
 
         @govukButton(
             ButtonViewModel(messages("site.continue"))
-                .asLink(routes.TaxReturnNotReadyController.onPageLoad(taxYear).url)
-                .withCssClass("govuk-button--secondary")
+                .asLink(vm.continueLink)
+                .withCssClass(vm.buttonStyle)
         )
     }
