--- a/app/views/AddSectionsView.scala.html
+++ b/app/views/AddSectionsView.scala.html
@@ -21,6 +21,7 @@
 
 @this(
         layout: templates.Layout,
+        formHelper: FormWithCSRF,
         govukButton: GovukButton,
         govukTag: GovukTag,
         link: Link,
@@ -44,9 +45,10 @@
 
         @taskList(List(("", vm.sections)))
 
-        @govukButton(
-            ButtonViewModel(messages("site.continue"))
-                .asLink(vm.continueLink)
-                .withCssClass(vm.buttonStyle)
-        )
+        @formHelper(action = vm.continueLink, Symbol("autoComplete") -> "off") {
+            @govukButton(
+                ButtonViewModel(messages("site.continue"))
+                    .withCssClass(vm.buttonStyle)
+            )
+        }
     }
