SASS-7893: Updated Play Frontend dependency to 9.10.0

--- a/app/views/AddSectionsAgentView.scala.html
+++ b/app/views/AddSectionsAgentView.scala.html
@@ -24,7 +24,7 @@
         govukButton: GovukButton,
         govukTag: GovukTag,
         link: Link,
-        taskList: TaskList,
+        taskList: OldTaskList,
         heading: Heading1,
         heading2: Heading2,
         p: ParagraphBody
