--- a/app/views/TaskListView.scala.html
+++ b/app/views/TaskListView.scala.html
@@ -23,7 +23,7 @@
         h1: Heading1,
         h2: Heading2,
         p: ParagraphBody,
-        tasks: TaskList
+        tasks: OldTaskList
 )
 
 @(taxYear: Int, vm: TaskListPageViewModel)(implicit request: Request[_], messages: Messages)
