--- a/app/views/AddSectionsView.scala.html
+++ b/app/views/AddSectionsView.scala.html
@@ -45,7 +45,7 @@
 
         @p(messages("addSections.completedSections", vm.completedCount), extraClasses = Seq("govuk-!-margin-bottom-7"))
 
-        @govukTaskList(TaskList((vm.sections)))
+        @govukTaskList(TaskList(vm.sections))
 
         @formHelper(action = vm.continueLink, Symbol("autoComplete") -> "off") {
             @govukButton(
