--- a/app/views/workandbenefits/AboutYourWorkView.scala.html
+++ b/app/views/workandbenefits/AboutYourWorkView.scala.html
@@ -29,7 +29,7 @@
     govukDetails: GovukDetails
 )
 
-@(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, taxYear: Int, existingData: Boolean)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("aboutYourWork.title")), taxYear = taxYear) {
 
