--- a/app/views/workandbenefits/AboutYourWorkRadioPageAgentView.scala.html
+++ b/app/views/workandbenefits/AboutYourWorkRadioPageAgentView.scala.html
@@ -28,7 +28,7 @@
     paragraph: ParagraphBody
 )
 
-@(form: Form[_], mode: Mode, taxYear: Int, existingData: Boolean)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, taxYear: Int, prePopData: Boolean)(implicit request: Request[_], messages: Messages)
 
 @yesHtml = {
     <div class="govuk-body">@messages("aboutYourWork.insetText.agent.yes", (taxYear -1).toString, taxYear.toString)</div>
@@ -51,8 +51,8 @@
                 legend = LegendViewModel(messages("aboutYourWorkRadioPage.agent.heading"))
                 .asPageHeading()
                 .withSize(LegendSize.Large),
-                conditionalHtmlYes = if(existingData) Some(yesHtml) else None,
-                conditionalHtmlNo = if(existingData) Some(noHtml) else None,
+                conditionalHtmlYes = if(prePopData) Some(yesHtml) else None,
+                conditionalHtmlNo = if(prePopData) Some(noHtml) else None,
             )
             .withHint(Hint(content = messages("aboutYourWorkRadioPage.agent.hint")))
             .removeInline()
