--- a/app/views/propertypensionsinvestments/RentalIncomeView.scala.html
+++ b/app/views/propertypensionsinvestments/RentalIncomeView.scala.html
@@ -32,7 +32,7 @@
     link: Link
 )
 
-@(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, taxYear: Int, prePopData: Boolean)(implicit request: Request[_], messages: Messages)
 
 @checkResidenceStatus = @{ Call("GET", config.checkResidenceStatusUrl) }
 
@@ -66,6 +66,10 @@
                 content = HtmlContent(detailsContent)
             )
         )
+
+        @if(prePopData) {
+            <div class="govuk-inset-text">@messages("rentalIncome.insetText", (taxYear-1).toString, taxYear.toString)</div>
+        }
 
         @govukCheckboxes(
             CheckboxesViewModel(
