--- a/app/views/workandbenefits/JobseekersAllowanceAgentView.scala.html
+++ b/app/views/workandbenefits/JobseekersAllowanceAgentView.scala.html
@@ -17,6 +17,7 @@
 @import components._
 @import viewmodels.LegendSize
 @import models.workandbenefits.JobseekersAllowance
+@import models.prePopulation.StateBenefitsPrePopulationResponse
 
 @this(
     layout: templates.Layout,
@@ -29,7 +30,7 @@
     p: ParagraphBody
 )
 
-@(form: Form[_], mode: Mode, taxYear: Int, prePopData: Boolean)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, taxYear: Int, prePopData: StateBenefitsPrePopulationResponse)(implicit request: Request[_], messages: Messages)
 
 @detailsContent = {
     @p(messages("jobseekersAllowance.agent.details.p"))
@@ -50,7 +51,7 @@
             content = HtmlContent(detailsContent)
         ))
 
-        @if(prePopData) {
+        @if(prePopData.hasEsaData) {
             <div class="govuk-inset-text">@messages("jobseekersAllowance.insetText.agent", (taxYear-1).toString, taxYear.toString)</div>
         }
 
