--- a/app/views/workandbenefits/JobseekersAllowanceAgentView.scala.html
+++ b/app/views/workandbenefits/JobseekersAllowanceAgentView.scala.html
@@ -51,8 +51,8 @@
             content = HtmlContent(detailsContent)
         ))
 
-        @if(prePopData.hasEsaData) {
-            <div class="govuk-inset-text">@messages("jobseekersAllowance.insetText.agent", (taxYear-1).toString, taxYear.toString)</div>
+        @if(prePopData.hasStateBenefits) {
+            <div class="govuk-inset-text">@messages(stateBenefitsMessageString(true), (taxYear-1).toString, taxYear.toString)</div>
         }
 
         @govukCheckboxes(
