--- a/app/views/workandbenefits/JobseekersAllowanceAgentView.scala.html
+++ b/app/views/workandbenefits/JobseekersAllowanceAgentView.scala.html
@@ -52,7 +52,7 @@
         ))
 
         @if(prePopData.hasStateBenefits) {
-            <div class="govuk-inset-text">@messages(stateBenefitsMessageString(true), (taxYear-1).toString, taxYear.toString)</div>
+            <div class="govuk-inset-text">@messages(prePopData.stateBenefitsMessageString(true), (taxYear-1).toString, taxYear.toString)</div>
         }
 
         @govukCheckboxes(
