--- a/app/views/workandbenefits/AboutYourWorkView.scala.html
+++ b/app/views/workandbenefits/AboutYourWorkView.scala.html
@@ -33,7 +33,7 @@
 
 @layout(pageTitle = title(form, messages("aboutYourWork.title")), taxYear = taxYear) {
 
-    @formHelper(action = controllers.workandbenefits.routes.AboutYourWorkController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
+    @formHelper(action = controllers.workandbenefits.routes.AboutYourWorkBaseController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "AboutYourWork")))
