[SASS-11982] Warnings (including some hidden by scalcOptions), logback.xml tweaks

--- a/app/views/TaxReturnNotReadyAgentView.scala.html
+++ b/app/views/TaxReturnNotReadyAgentView.scala.html
@@ -33,7 +33,7 @@
 
     @p(messages("taxReturnNotReady.p"))
 
-    @bullets(vm.getBulletItems)
+    @bullets(vm.getBulletItems())
 
     @govukButton(
         ButtonViewModel(messages("site.continue"))
