--- a/app/views/components/TaskItem.scala.html
+++ b/app/views/components/TaskItem.scala.html
@@ -31,7 +31,7 @@
                 <span class="app-task-list__task-name"
                       id="task-list__task--@{task.link.text}"
                       aria-describedby="task-list__task--@{task.link.text}__tag">
-                    @{task.linkText}
+                    @{task.linkText()}
                 </span>
             }
             case _ => {
@@ -39,7 +39,7 @@
                    id="task-list__task-link--@{task.link.text}"
                    href="@{task.link.url}"
                    aria-describedby="task-list__task--@{task.link.text}__tag">
-                    @{task.linkText}
+                    @{task.linkText()}
                 </a>
             }
         }
