--- a/.g8/radioButtonPage/app/views/$className$View.scala.html
+++ b/.g8/radioButtonPage/app/views/$className$View.scala.html
@@ -10,7 +10,7 @@
 
 @layout(pageTitle = title(form, messages("$className;format="decap"$.title")), taxYear = taxYear) {
 
-    @formHelper(action = routes.$className$Controller.onSubmit(mode, taxYear), 'autoComplete -> "off") {
+    @formHelper(action = routes.$className$Controller.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
