--- a/app/views/TaxReturnNotReadyView.scala.html
+++ b/app/views/TaxReturnNotReadyView.scala.html
@@ -33,7 +33,7 @@
 
     @p(messages("taxReturnNotReady.p"))
 
-    @bullets(vm.getBulletItems)
+    @bullets(vm.getBulletItems())
 
     @govukButton(
         ButtonViewModel(messages("site.continue"))
