--- a/app/views/aboutyou/HighIncomeChildBenefitChargeAgentView.scala.html
+++ b/app/views/aboutyou/HighIncomeChildBenefitChargeAgentView.scala.html
@@ -44,7 +44,7 @@
 
 @layout(pageTitle = title(form, messages("highIncomeChildBenefitCharge.agent.title")), taxYear = taxYear) {
 
-    @formHelper(action = controllers.aboutyou.routes.HighIncomeChildBenefitChargeController.onSubmit(mode, taxYear), 'autoComplete -> "off") {
+    @formHelper(action = controllers.aboutyou.routes.HighIncomeChildBenefitChargeController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
 
 
 
