--- a/app/views/aboutyou/YourResidenceStatusAgentView.scala.html
+++ b/app/views/aboutyou/YourResidenceStatusAgentView.scala.html
@@ -46,7 +46,7 @@
 
 @layout(pageTitle = title(form, messages("yourResidenceStatus.agent.title")), taxYear = taxYear) {
 
-    @formHelper(action = controllers.aboutyou.routes.YourResidenceStatusController.onSubmit(mode, taxYear), 'autoComplete -> "off") {
+    @formHelper(action = controllers.aboutyou.routes.YourResidenceStatusController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
